--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,23 @@
 }
 
 .custom-about-me-paragraph {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    line-height: 1.6;
+    font-size: 24px;
+    margin-right: 5%;
+}
+
+.custom-about-me-paragraph-2 {
+    margin-top: 7.5%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 1.6;
+    font-size: 20px;
+    color: grey;
+    margin-right: 5%;
+}
+
+.custom-about-me-right-side {
     margin-left: 5%;
-    line-height: 2;
-    font-size: larger;
 }
 
 .custom-about-me-section {
@@ -26,5 +39,34 @@
 }
 
 .custom-about-me-picture {
-    max-width: 43%;
+    max-width: 47%;
+    box-shadow: 5px 5px 10px grey;
+}
+
+.custom-footer {
+    margin-top: auto;
+    background-color: grey;
+}
+
+.custom-align-center {
+    text-align: center;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.custom-main {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.custom-footer-link {
+    list-style: none;
+    margin-left: 4%;
+    margin-right: 4%;
+    cursor: pointer;
+    color: white;
 }
